# Simple-LBM-CUDA

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: automata.h  cell.h  grid.h  render.h  vec.h  velocity_def.h
src/: kernel.cu  main.cpp  render.cpp
